--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A Hacker News clone made with Next.js",
   "main": "server.js",
   "scripts": {
-    "dev": "next"
+    "dev": "node server.js",
+    "start": "NODE_ENV=production node server.js",
+    "build": "next build"
   },
   "author": "Wender Xavier",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "axios": "^0.21.1",
     "next": "^10.0.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sw-precache-webpack-plugin": "^1.0.0"
   }
 }
